--- a/preamble.tex
+++ b/preamble.tex
@@ -54,11 +54,16 @@
     BoldItalicFont=*bi,
     Ligatures=Discretionary
 ]{times}
+% \setsansfont[
+%     Extension=.otf,
+%     UprightFont=*-Light,
+%    BoldFont=*-Bold,
+% ]{FrutigerLTStd}
 \setsansfont[
-    Extension=.otf,
-    UprightFont=*-Light,
-    BoldFont=*-Roman,
-]{FrutigerLTStd}
+    Extension=.ttf,
+    UprightFont=*-Regular,
+    BoldFont=*-Medium,
+]{Roboto}
 \setmathfont{NewComputerModernMath-Book}
 \setmathfont[%
     range={%
