--- a/references.bib
+++ b/references.bib
@@ -6,3 +6,11 @@
   sortname = {みやじましずお},
   langid = {japanese}
 }
+@book{miyajima-calculus,
+  title = {微分積分学I},
+  author = {宮島, 静雄},
+  year = {2003},
+  publisher = {共立出版},
+  sortname = {みやじましずお},
+  langid = {japanese}
+}
